--- a/voc.html
+++ b/voc.html
@@ -325,7 +325,9 @@
 <script type="text/javascript" src="words.js"></script>
 <script type="text/javascript" src="prons.js"></script>
 <script type="text/javascript" src="sent.js"></script>
-<script type="text/javascript" src="sample.js"></script>
+<script type="text/javascript" src="notfound.js"></script>
+<script type="text/javascript" src="synonym.js"></script>
+<script type="text/javascript" src="antonym.js"></script>
 <script type="text/javascript" src="insert.js"></script>
 <script type="text/javascript" src="slide.js"></script>
 </body>
